--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
     "@angular/router": "~8.2.3",
+    "@sweetalert2/ngx-sweetalert2": "^7.3.0",
     "bootstrap": "^5.2.3",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^9.7.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
